--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Home Page</h1>
 
+    <div class="hp2">
+    <h1>Home Page</h1>
+    </div>
 <div>
   <tr>
   <%= link_to 'Sign In', new_user_session_path, class:"btn btn-secondary" %> |
