--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,7 @@
   <%=render "home/header" %>
     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
-  <div class="container">
-  </br>
+  <div class="container-fluid">
 
     <%= yield %>
 </div>
