--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,4 +37,30 @@
     background-color:paleturquoise;
     padding-top: 10px;
     padding-bottom: 10px;
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: orangered;
+    text-shadow: 2px 2px 4px #000000;
+}
+.hp3{
+    background-image: url("https://images.unsplash.com/photo-1536987333706-fc9adfb10d91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80") ;
+    width:100%;
+    height:100%;
+    box-align:center;
+    align-items: center;
+}
+.heading{
+    font-size: 5rem;
+    line-height: 1.18181818;
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-family: Charlie Display, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+}
+.featured{
+    color:white;
+    font-size: 1rem;
+    line-height: 1.18181818;
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-family: sans-serif;
 }
