--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,15 +1,16 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Tickets</h1>
-<table class="table table-striped">
+<table class="table table-striped table-bordered table-hover">
 <div id="tickets">
    <tr>
+   <thead class="table-dark">
    <th>Time</th>
     <th>User</th>
     <th>PC</th>
     <th>Type</th>
-    <th>blabla</th>
+    <th>Description</th>
     <th>Link</th>
+    </thead>
   </tr>
   <% @tickets.each do |ticket| %>
     <tr>
