--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div>
-    <%= form.label :User, style: "display: block" %>
+    <%= form.label :User, style: "display: block; color:white;" %>
     <%= form.text_field :User %>
   </div>
 
   <div>
-    <%= form.label :Date, style: "display: block" %>
+    <%= form.label :Date, style: "display: block; color:white;" %>
     <%= form.text_field :Date %>
   </div>
 
   <div>
-    <%= form.label :PC, style: "display: block" %>
+    <%= form.label :PC, style: "display: block; color:white;" %>
     <%= form.text_field :PC %>
   </div>
 
   <div>
-    <%= form.label :Type, style: "display: block" %>
+    <%= form.label :Type, style: "display: block; color:white;" %>
     <%= form.text_field :Type %>
   </div>
 
   <div>
-    <%= form.label :Description, style: "display: block" %>
+    <%= form.label :Description, style: "display: block; color:white;" %>
     <%= form.text_field :Description %>
   </div>
 
