--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id ticket %>">
+<div id="<%= dom_id ticket %>" style="color:white">
   <p>
     <strong>User:</strong>
     <%= ticket.User %>
