--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 <h1 style="color:white; font-size: 1.5rem;">Dear
 <%= current_user.email %>,
 </h1>
-<h1 style="color:white; font-size: 1.5rem;">Don't You Dare Make Fun of My APP</h1>
+<h1 style="color:Orange; font-size: 1.5rem;">Don't You Dare Make Fun of My APP</h1>
 <br>
 <div>
   <tr>
