--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,9 +1,11 @@
+<div class="row flex-container" style="padding-right:10%  ; padding-left:10%; padding-top:5%; padding-bottom:20%"> 
+
 <p style="color: green"><%= notice %></p>
 
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-striped table-bordered table-hover" style="background-color:white;">
 <div id="tickets">
    <tr>
-   <thead class="table-dark">
+   <thead style="background-color:lightblue;">
    <th>Time</th>
     <th>User</th>
     <th>PC</th>
@@ -26,4 +28,4 @@
   <%= link_to "New ticket", new_ticket_path, class:"btn btn-secondary" %>
 </div>
 
-
+</div>
