--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,9 +1,12 @@
-<h1>New ticket</h1>
+<div class="row flex-container" style="background-color:#0052cc; padding-right:10%  ; padding-left:10%; padding-top:5%; padding-bottom:20%"> 
+
+<h1 style="color:white;">New ticket</h1>
 
 <%= render "form", ticket: @ticket %>
 
 <br>
-
-<div>
+</br>
+<div style="color:white;">
   <%= link_to "Back to tickets", tickets_path %>
 </div>
+
