--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 <h1 style="color:white; font-size: 1.5rem;">Dear
 <%= current_user.email %>,
 </h1>
-<h1 style="color:Orange; font-size: 1.5rem;">Don't You Dare Make Fun of My APP</h1>
+<h1 style="color:Orange; font-size: 1.5rem;">This APP is under Development and still not fully functioning</h1>
 <br>
 <div>
   <tr>
@@ -31,8 +31,7 @@
 <ul> <li class="featured"> <p>Create New Tickets</p> </li>
  <li class="featured"> Check list of open Tickets </li> 
  <li class="featured"> <p>Analyse Old Tickets</p> </li> 
- <li class="featured"> Community Support </li>
-  <li class="featured"> Zero obligation, no credit card needed </li> 
+ <li class="featured">  Support </li>
 
 
     </span></div></div></div></div> 
