--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -8,21 +8,24 @@
    <thead style="background-color:lightblue;">
    <th>Time</th>
     <th>User</th>
-    <th>PC</th>
+    <th>Product</th>
     <th>Type</th>
     <th>Description</th>
     <th>Link</th>
+
     </thead>
   </tr>
   <% @tickets.each do |ticket| %>
+  <%if ticket.user == current_user%>
     <tr>
-      <td><%= ticket.created_at.strftime('%Y-%m-%d') %> </td>
+      <td><%= ticket.created_at.strftime('%Y-%m-%d-') %> </td>
       <td><%= ticket.User %> </td>
       <td><%= ticket.PC %></td>
       <td> <%= ticket.Type %> </td>
       <td> <%= ticket.Description %> </td>
       <td> <%= link_to "Show this ticket", ticket, class:"btn btn-secondary" %></td>
-    </tr>
+  </tr>
+  <% end %>
   <% end %>
   </table>
   <%= link_to "New ticket", new_ticket_path, class:"btn btn-secondary" %>
