--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,13 @@
 <div class="row flex-container" style="background-color:#0052cc; padding-right:10%  ; padding-left:10%; padding-top:5%; padding-bottom:20%"> 
 <div class="column column-md-5 column-lg-4 column-lg-offset-1 vertical-middle text-n0 s0 between"> 
 <div class="component component--heading"> 
-<h5 class="heading" style="color:white; font-size: 3rem;"> Welcome to Our Local Customer Service Ticketing Service </h5> 
+<h5 class="heading" style="color:white; font-size: 3rem;"> Welcome To KiteMania Riders' Registration Portal </h5> 
 </div> 
 <% if user_signed_in? %>
 <h1 style="color:white; font-size: 1.5rem;">Dear
 <%= current_user.email %>,
 </h1>
-<h1 style="color:Orange; font-size: 1.5rem;">DON'T YOU DARE MAKE FUN OF MY APP</h1>
+<h1 style="color:Orange; font-size: 1.5rem;">YOU HAVE TO BUY ALI V-BUCKS</h1>
 <br>
 <div>
   <tr>
@@ -25,13 +25,7 @@
 </div>
 <%end%>
 <div class="component component--heading" style="padding-top:8px;"> 
-<h5 class="heading" style="color:white; font-size: 2rem;"> In this service you can: </h5> 
-</div> 
-<div class="component component--list-block"> 
-<ul> <li class="featured"> <p>Create New Tickets</p> </li>
- <li class="featured"> Check list of open Tickets </li> 
- <li class="featured"> <p>Analyse Old Tickets</p> </li> 
- <li class="featured">  Support </li>
+
 
 
     </span></div></div></div></div> 
