--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-  <%= link_to 'Ticketing System', root_path, class:'navbar-brand'%>
+  <%= link_to image_tag("LogokiteMania.png", height: 40), home_index_path%>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      </li>
       <%= link_to 'About', home_about_path, class:'nav-link active'%>
 
        
