--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
-<%= image_tag('2.png', :size => '100%xauto') %>
+
+<div >
+  <img class="full-width" <%=image_tag("2.png")%>>
+</div>
+
+
 <div class="row flex-container" style="background-color:lightgrey; padding-right:10%  ; padding-left:10%; padding-top:5%; padding-bottom:20%"> 
 <div class="column column-md-5 column-lg-4 column-lg-offset-1 vertical-middle text-n0 s0 between"> 
 <div class="component component--heading"> 
