--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
   <%=render "home/header" %>
  
-  <div class="container-fluid">
+  <div>
 
     <%= yield %>
        <p class="notice"><%= notice %></p>
