--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </li>
-      <%= link_to 'About', home_about_path, class:'nav-link active'%>
+      <%= link_to '', home_about_path, class:'nav-link active'%>
 
        
 
