--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,13 +9,7 @@
 
 <h5 class="heading" style="color:#0a7ac2; font-size: 3rem;"> Welcome To KiteMania Riders' Registration Portal </h5> 
 </div> 
-<%= button_to "Login with Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-secondary" %>
 
-<% if user_signed_in? %>
-<h1 style="color:#0a7ac2; font-size: 1.5rem;">Dear
-<%= current_user.email %>,
-</h1>
-<h1 style="color:Orange; font-size: 1.5rem;">YOU HAVE TO BUY ALI V-BUCKS</h1>
 <br>
 <div>
 <div class="component component--heading" style="padding-top:8px;"> 
@@ -29,29 +23,21 @@
   
    <br/>
   <tr>
-  <%= link_to 'Big Air [Advanced]', tickets_path, class:"btn btn-secondary" %> 
+  <%= link_to 'Big Air [Advanced]', "https://accept.paymobsolutions.com/standalone?ref=p_3eS", class:"btn btn-secondary" %> 
   </tr>
    <br/>
   
    <br/>
   <tr>
-  <%= link_to 'Big Air [Females]', tickets_path, class:"btn btn-secondary" %> 
+  <%= link_to 'Big Air [Females]', "https://accept.paymobsolutions.com/standalone?ref=p_3e7", class:"btn btn-secondary" %> 
   </tr>
    <br/>
   
    <br/>
     <tr>
-  <%= link_to 'Big Air [Under 16]', tickets_path, class:"btn btn-secondary" %> 
+  <%= link_to 'Big Air [Under 16]', "https://accept.paymobsolutions.com/standalone?ref=p_3en", class:"btn btn-secondary" %> 
   </tr>
 </div>
-<% else %>
-<div>
-  <tr>
-  <%= link_to 'Sign In', new_user_session_path, class:"btn btn-secondary" %> |
-  </tr>
-  <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-secondary" %>
-</div>
-<%end%>
 
     </span></div></div></div></div> 
 
