--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,16 @@
     <tr>
   <%= link_to 'Big Air [Under 16]', "https://accept.paymobsolutions.com/standalone?ref=p_3en", class:"btn btn-secondary" %> 
   </tr>
+<br/>
+     <br/>
+    <tr>
+  <%= link_to 'WindSurfing [Slalom]', "https://accept.paymobsolutions.com/standalone?ref=p_3et", class:"btn btn-secondary" %> 
+  </tr>
+<br/>
+     <br/>
+    <tr>
+  <%= link_to 'WindSurfing [FreeStyle]', "https://accept.paymobsolutions.com/standalone?ref=p_3ek", class:"btn btn-secondary" %> 
+  </tr>
 </div>
 
     </span></div></div></div></div> 
