--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,6 +47,11 @@
     <tr>
   <%= link_to 'WindSurfing [FreeStyle]', "https://accept.paymobsolutions.com/standalone?ref=p_3ek", class:"btn btn-secondary" %> 
   </tr>
+  <br/>
+     <br/>
+    <tr>
+  <%= link_to 'Sailing', "https://accept.paymobsolutions.com/standalone?ref=p_3eR", class:"btn btn-secondary" %> 
+  </tr>
 </div>
 
     </span></div></div></div></div> 
